--- a/src/public/style/main.scss
+++ b/src/public/style/main.scss
@@ -25,10 +25,6 @@
   }
 }
 
-.minWidth {
-  min-width: 50vw;
-}
-
 .maxWidth {
   max-width: 25%;
   @media (max-width: 430px) {
@@ -36,8 +32,26 @@
   }
 }
 
-.maxHeight {
-  max-height: 50vh;
+.customForm {
+  width: 50%;
+  @media (max-width: 430px) {
+    width: 80%;
+  }
+}
+
+.productImage {
+  width: 25%;
+  height: 100%;
+  @media (max-width: 430px) {
+    width: 100%;
+  }
+}
+
+.checkout {
+  width: 50%;
+  @media (max-width: 430px) {
+    width: 100%;
+  }
 }
 
 .voter {
